@@ -49,6 +49,7 @@ Changes in 2.8
 - reset current school if updating self schools in User.php
 - move tipmessage CSS (#Migoicons) & jscalendar stylesheet import from Warehouse.php to stylesheet.css
 - Add Admin checks for SetUserStaffID() & SetUserStudentID() functions in Current.php & Side.php
+- Save enrollment in Student.php & SaveEnrollment.fnc.php
 
 Upgrade from 2.7.x
 ------------------
